MNT: add suggestions from the bot

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -20,14 +20,14 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6,<4.0
+    - python ${{ python_min }}.*
     - poetry
   run:
     - numba >=0.50
-    - python >=3.6,<4.0
+    - python >=${{ python_min }
     - scipy >=1.5.0
     - numpy
-    - importlib_metadata
+    - importlib-metadata
 
 tests:
   - python:
