--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -24,7 +24,7 @@ requirements:
     - poetry
   run:
     - numba >=0.50
-    - python >=${{ python_min }
+    - python >=${{ python_min }}
     - scipy >=1.5.0
     - numpy
     - importlib-metadata
