--- a/pixi.toml
+++ b/pixi.toml
@@ -6,10 +6,10 @@
 "$schema" = "https://pixi.sh/v0.36.0/schema/manifest/schema.json"
 
 [project]
-name = "28"
+name = "numba-stats-feedstock"
 version = "3.51.1"  # conda-smithy version used to generate this file
-description = "Pixi configuration for conda-forge/28"
-authors = ["@conda-forge/"]
+description = "Pixi configuration for conda-forge/numba-stats-feedstock"
+authors = ["@conda-forge/numba-stats"]
 channels = ["conda-forge"]
 platforms = ["linux-64", "osx-64", "win-64"]
 
@@ -24,13 +24,13 @@ cmd = "inspect_artifacts --all-packages"
 description = "List contents of all packages found in rattler-build build directory."
 [tasks.build]
 cmd = "rattler-build build --recipe recipe"
-description = "Build 28 directly (without setup scripts), no particular variant specified"
+description = "Build numba-stats-feedstock directly (without setup scripts), no particular variant specified"
 [tasks."build-linux_64_"]
 cmd = "rattler-build build --recipe recipe -m .ci_support/linux_64_.yaml"
-description = "Build 28 with variant linux_64_ directly (without setup scripts)"
+description = "Build numba-stats-feedstock with variant linux_64_ directly (without setup scripts)"
 [tasks."inspect-linux_64_"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_.yaml"
-description = "List contents of 28 packages built for variant linux_64_"
+description = "List contents of numba-stats-feedstock packages built for variant linux_64_"
 
 [feature.smithy.dependencies]
 conda-smithy = "*"
